[package]
name = "tnnl-cli"
version = "0.3.2"
edition = "2024"
description = "Expose localhost to the internet. Self-hosted ngrok alternative."
license = "MIT"
repository = "https://github.com/jbingen/tnnl"
homepage = "https://tnnl.run"
keywords = ["tunnel", "ngrok", "localhost", "webhook", "proxy"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "tnnl"
path = "src/lib.rs"

[[bin]]
name = "tnnl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
yamux = "0.13"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
rand = "0.9"
anyhow = "1"
base64 = "0.22"
console = "0.15"
toml = "0.8"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
flate2 = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
